--- a/src/fortyeight/DynamicIPBundle/Resources/views/Default/index.html.twig
+++ b/src/fortyeight/DynamicIPBundle/Resources/views/Default/index.html.twig
@@ -7,12 +7,14 @@
 	<tr>
 		<th>IP</th>
 		<th>Title</th>
+		<th>Token</th>
 		<th>Actions</th>
 	</tr>
 	{% for ip in dynIPs %}
 	<tr>
 		<td>{{ ip.ip }}</td>
 		<td>{{ ip.title }}</td>
+		<td>{{ ip.token }}</td>
 		<td>
 			<a href="{{ path('remove_ip', {'hash': ip.hash}) }}"><span class="glyphicon glyphicon-trash"></span></a>
 			<a href="{{ path('update_ip', {'hash': ip.hash}) }}"><span class="glyphicon glyphicon-refresh"></span></a>
